SLING-12212 Improve logging when TheadPoolExecutorCleaningThreadLocals cannot be initialized